--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "jet-logger": "^1.0.6",
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
@@ -82,6 +83,7 @@
     "@types/jsonfile": "^6.0.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.13",
+    "@types/node-fetch": "^2.5.12",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
