--- a/package.json
+++ b/package.json
@@ -65,10 +65,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-jwt": "^6.1.0",
+    "express-jwt-authz": "^2.4.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.6",
     "jsonfile": "^6.1.0",
+    "jwks-rsa": "^2.0.4",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1"
