--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "build.ts"
   ],
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.17.1",
     "command-line-args": "^5.2.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
