--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "ltijs": "^5.8.1",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "papaparse": "^5.3.1"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
@@ -90,6 +91,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.13",
     "@types/node-fetch": "^2.5.12",
+    "@types/papaparse": "^5.2.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
