--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
-    "papaparse": "^5.3.1"
+    "papaparse": "^5.3.1",
+    "tslint": "^6.1.3"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
