--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "./node_modules/.bin/ts-node build.ts",
     "format": "npx prettier --write .",
     "lint": "npx eslint src --ext .ts",
+    "lint:fix": "npx eslint src --ext .ts --fix",
     "start": "node -r module-alias/register ./dist --env=production",
     "start:dev": "npx nodemon",
     "test": "npx nodemon --config ./spec/nodemon.json",
@@ -37,9 +38,11 @@
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.6",
     "jsonfile": "^6.1.0",
+    "ltijs": "^5.8.1",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "papaparse": "^5.3.1"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
@@ -52,6 +55,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.13",
     "@types/node-fetch": "^2.5.12",
+    "@types/papaparse": "^5.2.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
