--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node -r module-alias/register ./dist --env=production",
     "start:dev": "npx nodemon",
     "test": "npx nodemon --config ./spec/nodemon.json",
-    "test:no-reloading": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./spec"
+    "test:no-reloading": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./spec",
+    "orm": "npx typeorm"
   },
   "nodemonConfig": {
     "watch": [
@@ -28,6 +29,7 @@
     "@server": "dist/Server"
   },
   "dependencies": {
+    "@okta/jwt-verifier": "^2.3.0",
     "airtable": "^0.11.1",
     "command-line-args": "^5.2.0",
     "cookie-parser": "^1.4.5",
@@ -39,11 +41,11 @@
     "jet-logger": "^1.0.6",
     "jsonfile": "^6.1.0",
     "ltijs": "^5.8.1",
-    "module-alias": "^2.2.2",
-    "morgan": "^1.10.0",
-    "node-fetch": "^2.6.1",
     "papaparse": "^5.3.1",
-    "tslint": "^6.1.3"
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "tslint": "^6.1.3",
+    "typeorm": "^0.2.37"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
