add user entity to database

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,7 @@
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [
       "src/@types",
-      "node_modules/@types"
+      "node_modules/@types",
     ],                       /* List of folders to include type definitions from. */
     "types": [
       "node"
@@ -79,6 +79,9 @@
       ],
       "@shared/*": [
         "src/shared/*"
+      ],
+      "@middleware": [
+        "src/middleware/*"
       ],
       "@server": [
         "src/Server"
