--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ext": "ts, js, json, html",
     "ignore": [
       "src/public",
-      ".git", 
+      ".git",
       "node_modules/**/node_modules"
     ],
     "exec": "./node_modules/.bin/ts-node -r tsconfig-paths/register --files ./src"
@@ -54,6 +54,7 @@
     "@types/command-line-args": "^5.2.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/express-serve-static-core": "^4.17.24",
     "@types/find": "^0.2.1",
     "@types/fs-extra": "^9.0.12",
     "@types/jasmine": "^3.8.2",
@@ -71,6 +72,7 @@
     "find": "^0.3.0",
     "fs-extra": "^10.0.0",
     "jasmine": "^3.8.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.4",
     "ts-node": "^10.2.0",
