--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,7 +69,8 @@
       "@daos/*": ["src/daos/*"],
       "@entities/*": ["src/entities/*"],
       "@shared/*": ["src/shared/*"],
-      "@server": ["src/Server"]
+      "@server": ["src/Server"],
+      "@services/": ["src/services/*"]
     }
   },
   "include": ["src/**/*.ts", "spec/**/*.ts"],
