--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
-    "papaparse": "^5.3.1"
+    "papaparse": "^5.3.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
@@ -56,6 +57,7 @@
     "@types/node": "^16.4.13",
     "@types/node-fetch": "^2.5.12",
     "@types/papaparse": "^5.2.6",
+    "@types/request": "^2.48.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
