--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@entities": "dist/entities",
     "@shared": "dist/shared",
     "@middleware": "dist/middleware",
-    "@server": "dist/Server"
+    "@server": "dist/Server",
+    "@services": ["dist/services"]
   },
   "dependencies": {
     "@okta/jwt-verifier": "^2.3.0",
