--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.6",
     "jsonfile": "^6.1.0",
+    "lodash": "^4.17.21",
     "ltijs": "^5.8.1",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
@@ -65,6 +66,7 @@
     "@types/fs-extra": "^9.0.12",
     "@types/jasmine": "^3.8.2",
     "@types/jsonfile": "^6.0.1",
+    "@types/lodash": "^4.14.181",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.13",
     "@types/node-fetch": "^2.5.12",
