adds  and  npm scripts

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start:dev": "npx nodemon",
     "test": "npx nodemon --config ./spec/nodemon.json",
     "test:no-reloading": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./spec",
-    "orm": "npx typeorm"
+    "orm": "npx typeorm",
+    "tsc": "tsc",
+    "postinstall": "npm run tsc"
   },
   "nodemonConfig": {
     "watch": [
