--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "labs-be",
+  "name": "labs-be-test-deploy",
   "version": "0.0.0",
   "scripts": {
     "build": "./node_modules/.bin/ts-node build.ts",
