--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@okta/jwt-verifier": "^2.3.0",
     "airtable": "^0.11.1",
+    "bottleneck": "^2.19.5",
     "command-line-args": "^5.2.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
@@ -44,14 +45,16 @@
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.6",
     "jsonfile": "^6.1.0",
+    "lodash": "^4.17.21",
     "ltijs": "^5.8.1",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
-    "request": "^2.88.2",
     "papaparse": "^5.3.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
     "tslint": "^6.1.3",
     "typeorm": "^0.2.37"
   },
@@ -64,6 +67,7 @@
     "@types/fs-extra": "^9.0.12",
     "@types/jasmine": "^3.8.2",
     "@types/jsonfile": "^6.0.1",
+    "@types/lodash": "^4.14.181",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.13",
     "@types/node-fetch": "^2.5.12",
