--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@okta/jwt-verifier": "^2.3.0",
     "airtable": "^0.11.1",
+    "body-parser": "^1.20.0",
     "bottleneck": "^2.19.5",
     "command-line-args": "^5.2.0",
     "cookie-parser": "^1.4.5",
@@ -46,6 +47,7 @@
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.6",
+    "jsforce": "^1.11.0",
     "jsonfile": "^6.1.0",
     "lodash": "^4.17.21",
     "ltijs": "^5.8.1",
