--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/find": "^0.2.1",
     "@types/fs-extra": "^9.0.12",
     "@types/jasmine": "^3.8.2",
+    "@types/jsforce": "^1.9.43",
     "@types/jsonfile": "^6.0.1",
     "@types/lodash": "^4.14.181",
     "@types/morgan": "^1.9.3",
