--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
+    "octokit": "^2.0.7",
     "papaparse": "^5.3.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
