--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "format": "npx prettier --write .",
     "lint": "npx eslint src --ext .ts",
     "lint:fix": "npx eslint src --ext .ts --fix",
-    "start": "node -r module-alias/register ./dist --env=production",
+    "start": "node",
     "start:dev": "npx nodemon",
     "test": "npx nodemon --config ./spec/nodemon.json",
     "test:no-reloading": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./spec",
