adds npm scripts, modifies ProcFile

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "labs-be-test-deploy",
   "version": "0.0.0",
   "scripts": {
-    "build": "./node_modules/.bin/ts-node build.ts",
+    "build": "tsc",
     "format": "npx prettier --write .",
     "lint": "npx eslint src --ext .ts",
     "lint:fix": "npx eslint src --ext .ts --fix",
-    "start": "node",
+    "start": "node build/index.js",
     "start:dev": "npx nodemon",
+    "postinstall": "npm run build",
     "test": "npx nodemon --config ./spec/nodemon.json",
     "test:no-reloading": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./spec",
     "orm": "npx typeorm",
