--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "nodemon": "^2.0.12",
     "supertest": "^6.1.4",
     "ts-node": "^10.2.0",
+    "tsc": "^2.0.4",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.4.2"
   }
