--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "npx prettier --write .",
     "lint": "npx eslint src --ext .ts",
     "lint:fix": "npx eslint src --ext .ts --fix",
-    "start": "node build/index.js",
+    "start": "ts-node -r tsconfig-paths/register -r dotenv/config --transpile-only src/index.ts",
     "start:dev": "npx nodemon",
     "postinstall": "npm run build",
     "test": "npx nodemon --config ./spec/nodemon.json",
@@ -49,7 +49,6 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
-    "jet-logger": "^1.0.6",
     "jsforce": "^1.11.0",
     "jsonfile": "^6.1.0",
     "lodash": "^4.17.21",
@@ -93,9 +92,9 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.4",
-    "ts-node": "^10.2.0",
+    "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
-    "tsconfig-paths": "^3.10.1",
+    "tsconfig-paths": "^3.14.1",
     "typescript": "^4.4.2"
   }
 }
