--- a/package.json
+++ b/package.json
@@ -59,8 +59,11 @@
     "papaparse": "^5.3.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "tslint": "^6.1.3",
-    "typeorm": "^0.2.37"
+    "typeorm": "^0.2.37",
+    "typescript": "^4.8.2"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
@@ -90,9 +93,6 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.4",
-    "ts-node": "^10.9.1",
-    "tsc": "^2.0.4",
-    "tsconfig-paths": "^3.14.1",
-    "typescript": "^4.8.2"
+    "tsc": "^2.0.4"
   }
 }
