update config and add jest test

--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -3,5 +3,10 @@
   "compilerOptions": {
     "sourceMap": false
   },
-  "exclude": ["spec", "src/**/*.mock.ts"]
+  "exclude": [
+    "spec",
+    "src/**/*.mock.ts", 
+    "**/__mocks__/*", 
+    "**/__tests__/*"
+  ]
 }
