--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "start": "ts-node -r tsconfig-paths/register -r dotenv/config --transpile-only src/index.ts",
     "start:dev": "npx nodemon",
     "compile": "npx -p typescript tsc --project tsconfig.prod.json",
-    "test": "npx nodemon --config ./spec/nodemon.json",
-    "test:no-reloading": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./spec",
+    "test": "npx jest --config ./jest.config.js --silent=false",
+    "specs": "npx nodemon --config ./spec/nodemon.json",
+    "spec": "npx jasmine-ts --config=jasmine.json",
     "orm": "npx typeorm",
     "tsc": "tsc"
   },
@@ -48,6 +49,7 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
+    "jet-logger": "^1.2.6",
     "jsforce": "^1.11.0",
     "jsonfile": "^6.1.0",
     "lodash": "^4.17.21",
@@ -74,6 +76,7 @@
     "@types/find": "^0.2.1",
     "@types/fs-extra": "^9.0.12",
     "@types/jasmine": "^3.8.2",
+    "@types/jest": "^29.1.2",
     "@types/jsforce": "^1.9.43",
     "@types/jsonfile": "^6.0.1",
     "@types/lodash": "^4.14.181",
@@ -91,7 +94,12 @@
     "find": "^0.3.0",
     "fs-extra": "^10.0.0",
     "jasmine": "^3.8.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.4.0",
+    "jasmine-ts-console-reporter": "^3.1.1",
+    "jest": "^29.1.2",
     "nodemon": "^2.0.12",
-    "supertest": "^6.1.4"
+    "supertest": "^6.1.4",
+    "ts-jest": "^29.0.3"
   }
 }
