--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -8,6 +8,7 @@
 
     // these are the eslint-only inclusions
     "./.eslintrc.js",
-    "./ormconfig.ts"
+    "./ormconfig.ts",
+    "./jest.config.js",
   ]
 }
